objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Student Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>